--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Home
   link: /
-- name: About
-  link: /about.html
-- name: Blog
-  link: /blog.html
+- name: Rapportage
+  link: /rapportage.html
+- name: Prototypes
+  link: /prototypes.html
