--- a/_prototypes/01_routeplanner_map_loadIn_fadeIn.framer/framer/config.json
+++ b/_prototypes/01_routeplanner_map_loadIn_fadeIn.framer/framer/config.json
@@ -1,13 +1,16 @@
 {
   "orientation" : 0,
   "updateDelay" : 0.29999999999999999,
-  "designModeSelected" : 1,
-  "cachedDeviceHeight" : 0,
+  "designModeSelected" : 0,
+  "cachedDeviceHeight" : 900,
   "contentScale" : 1,
   "fullScreen" : false,
-  "cachedDeviceWidth" : 0,
+  "cachedDeviceWidth" : 1440,
   "deviceType" : "apple-macbook-pro",
   "sharedPrototype" : 0,
+  "propertyPanelToggleStates" : {
+
+  },
   "projectId" : "0826213A-34E1-4321-982B-C5F65E3C361A",
   "deviceOrientation" : 0,
   "selectedHand" : "",
