--- a/prototypes/00_routeplanner_boilerplate.framer/framer/config.json
+++ b/prototypes/00_routeplanner_boilerplate.framer/framer/config.json
@@ -7,20 +7,23 @@
   "cachedDeviceWidth" : 0,
   "deviceType" : "fullscreen",
   "sharedPrototype" : 0,
-  "projectId" : "462CD652-425C-4C55-8627-1F28B0F4133D",
+  "propertyPanelToggleStates" : {
+
+  },
+  "projectId" : "C82F77C7-E089-4157-BD0B-BFDEB8F5F063",
   "deviceOrientation" : 0,
   "selectedHand" : "",
   "showBezel" : true,
   "foldedCodeRanges" : [
-    "{31, 1503}",
-    "{1535, 574}",
-    "{2110, 918}",
-    "{3029, 570}",
-    "{3600, 3324}",
-    "{6925, 3081}",
-    "{10007, 1170}",
-    "{11178, 2106}",
-    "{13285, 1189}"
+    "{31, 1600}",
+    "{1632, 574}",
+    "{2207, 926}",
+    "{3134, 570}",
+    "{3705, 3324}",
+    "{7030, 3093}",
+    "{10124, 1170}",
+    "{11295, 2108}",
+    "{13404, 1191}"
   ],
   "deviceScale" : 1
 }
