--- a/prototypes/12.3_busstop_new.framer/framer/config.json
+++ b/prototypes/12.3_busstop_new.framer/framer/config.json
@@ -10,23 +10,12 @@
   "propertyPanelToggleStates" : {
 
   },
-  "projectId" : "2935CF57-828C-486D-9750-54234CA8DFE1",
+  "projectId" : "8BB1F669-854D-460F-86B9-65C7C1913347",
   "deviceOrientation" : 0,
   "selectedHand" : "",
-  "showBezel" : true,
+  "showBezel" : 0,
   "foldedCodeRanges" : [
-    "{31, 2172}",
-    "{2204, 574}",
-    "{2779, 924}",
-    "{3704, 574}",
-    "{4279, 3326}",
-    "{7606, 473}",
-    "{8080, 3539}",
-    "{11620, 1616}",
-    "{13237, 684}",
-    "{13922, 2303}",
-    "{16226, 3037}",
-    "{19264, 6285}"
+
   ],
   "deviceScale" : 1
 }
